# AoC2021

./: CMakeLists.txt  README.md  main.cpp
output/: day13.txt
outputs/: day1_1  day1_2  day20.txt  day2_1  day3_1
src/: CMakeLists.txt  Helpers.cpp  Helpers.h  Solvers.cpp  Solvers.h  Structures.cpp  Structures.h
